Add release script

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "release": "npx shadow-cljs release app"
+  },
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
